Review cloudsaving + UI fix
Fixed layout issue for review window. Fixed ID problem that resulted in a new ID being created when a book is moved. Added cloudsaving for reviews.

--- a/edaf90-project/src/app/read-books/read-books.component.css
+++ b/edaf90-project/src/app/read-books/read-books.component.css
@@ -14,7 +14,10 @@ h1{
     color: var(--text-color);
     width: 33%;
   }
-
+  
+  mat-form-field.mat-form-field {
+    width: 100%;
+  }
 
 
 .btn-right{
